@@ -1,0 +1,13 @@
+{
+    "name": "Ancient Stone",
+    "id": "thaumcraft_stone_ancient",
+    "type": "ROCK",
+    "hardness": 2.0,
+    "resistance": 10.0,
+    "textures": "thaumcraft:blocks/ancient_stone_1",
+    "blocks": {
+        "full": { "id": "thaumcraft:stone", "meta": 2 },
+        "stairs": "thaumcraft:ancient_stairs",
+        "slab": { "id": "thaumcraft:slab_stone", "meta": 2 }
+    }
+}
