@@ -1,0 +1,13 @@
+{
+    "name": "Arcane Stone",
+    "id": "thaumcraft_stone_arcane",
+    "type": "ROCK",
+    "hardness": 2.0,
+    "resistance": 10.0,
+    "textures": "thaumcraft:blocks/arcane_stone_1",
+    "blocks": {
+        "full": { "id": "thaumcraft:stone", "meta": 0 },
+        "stairs": "thaumcraft:arcane_stairs",
+        "slab": { "id": "thaumcraft:slab_stone", "meta": 0 }
+    }
+}
