@@ -1,0 +1,13 @@
+{
+    "name": "Arcane Stone Brick",
+    "id": "thaumcraft_stone_arcane_brick",
+    "type": "ROCK",
+    "hardness": 2.0,
+    "resistance": 10.0,
+    "textures": "thaumcraft:blocks/arcane_brick_stone",
+    "blocks": {
+        "full": { "id": "thaumcraft:stone", "meta": 1 },
+        "stairs": "thaumcraft:arcane_brick_stairs",
+        "slab": { "id": "thaumcraft:slab_stone", "meta": 1 }
+    }
+}
