@@ -1,0 +1,11 @@
+{
+    "name": "Void Metal Block",
+    "id": "thaumcraft_void_metal_block",
+    "type": "METAL",
+    "hardness": 4.0,
+    "resistance": 10.0,
+    "textures": "thaumcraft:blocks/void_metal",
+    "blocks": {
+        "full": { "id": "thaumcraft:metal", "meta": 1 }
+    }
+}
